assets/css/main.css
/* ... */
/* XSmall */

	@media screen and (max-width: 480px) {

		.arbiter-ui {
			min-width: 250px;	
			max-width: 250;
		}
		/* Header */

			#header {
				padding: 4.5em 1.5em;
			}

				#header h1 br {
					display: none;
				}

		/* Footer */

			#footer .copyright li {
				border-left-width: 0;
				display: block;
				line-height: 2.25em;
				margin-left: 0;
				padding-left: 0;
			}

	}

